[gd_scene load_steps=4 format=3 uid="uid://bqy3xv8jmn6gp"]

[ext_resource type="Script" path="res://src/scripts/player.gd" id="1_player"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(32, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_attack"]
size = Vector2(48, 32)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_player")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.2, 0.6, 1, 1)
position = Vector2(0, -32)
scale = Vector2(32, 64)
texture = SubResource("RectangleShape2D_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_player")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(40, -32)
collision_layer = 0
collision_mask = 2

[node name="AttackShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_attack")
disabled = true

[node name="AttackSprite" type="Sprite2D" parent="AttackArea"]
modulate = Color(1, 0.2, 0.2, 0.5)
scale = Vector2(48, 32)
texture = SubResource("RectangleShape2D_attack")
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
enabled = true
position_smoothing_enabled = true
position_smoothing_speed = 5.0
